[gd_scene load_steps=4 format=3 uid="uid://bchrej7d20kxs"]

[ext_resource type="PackedScene" uid="uid://bkvojy2twfmob" path="res://Scenes/ShipSystems/Ship_System_Base.tscn" id="1_2kqdq"]
[ext_resource type="Script" uid="uid://chh6nsfu83vap" path="res://Scripts/ShipSystems/ship_engine.gd" id="2_cqdlt"]
[ext_resource type="Texture2D" uid="uid://df6s0xgirm0v2" path="res://Assets/Textures/Screens/EngineScreen.png" id="3_63dwo"]

[node name="ShipEngine" instance=ExtResource("1_2kqdq")]
script = ExtResource("2_cqdlt")

[node name="StatusLabels" type="RichTextLabel" parent="." index="0"]
offset_left = 16.0
offset_top = 16.0
offset_right = 175.0
offset_bottom = 198.0
text = "POSITION:
SPEED:  
ENGINE:
HEADING:
DEPTH:  "

[node name="StatusNums" type="RichTextLabel" parent="." index="1"]
offset_left = 192.0
offset_top = 16.0
offset_right = 378.0
offset_bottom = 194.0
text = "FOX
123
456
789
123
456
789"

[node name="InputText" type="RichTextLabel" parent="." index="2"]
offset_left = 64.0
offset_top = 205.0
offset_right = 168.0
offset_bottom = 248.0
text = "INPUT"

[node name="InputBox" type="LineEdit" parent="." index="3"]
offset_left = 64.0
offset_top = 256.0
offset_right = 168.0
offset_bottom = 304.0
virtual_keyboard_enabled = false

[node name="Sprite2D" type="Sprite2D" parent="." index="4"]
position = Vector2(950, 540)
texture = ExtResource("3_63dwo")

[connection signal="text_changed" from="InputBox" to="." method="_on_input_box_text_changed"]
